styles/Hero.module.css
.hero {
    min-height: 600px;
    width: 90vw;
    margin-top: 90px;
    perspective: 1000px;
    position: relative;
}

.nameWrapper {
    display: flex;
    flex-direction: column;
    height: 100%;
    transform-style: preserve-3d;
    padding-top: 5%;
    text-align: right;
}

.name {
    display: block;
    font-size: 9.5vw;
    font-weight: 900;
    text-align: right;
    padding-right: 13%;
}

@media screen and (max-width: 1500px) {
    .name {
        padding-right: 10%;
    }
}

@media screen and (max-width: 1200px) {
    .name {
        padding-right: 12%;
    }
}

@media screen and (max-width: 796px) {
    /* .name {
        padding-right: 10%;
    } */
}

@media screen and (max-width: 630px) {
    .name {
        font-size: 6rem;
    }
}

@media screen and (max-width: 467px) {
    /* .nameWrapper {
        transform: rotateY(-60deg);
    } */

    .name {
        font-size: 4rem;
    }
}

